ecs_cfn.yml
AWSTemplateFormatVersion: 2010-09-09
Transform: AWS::Serverless-2016-10-31
Parameters:
  imageRepository:
    Type: String
    # specify your docker registry or replace when creating stack
    Default: 'docker.io/tab9357/simple-app'
  ecsDemoVpcId:
    Type: AWS::EC2::VPC::Id
  subnetIdList:
    Type: List<AWS::EC2::Subnet::Id>
Resources:
  TaskExecutionRoleArn:
    Type: AWS::IAM::Role
    Properties:
      RoleName: ecs-demo-task-execution-role
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Action:
              - sts:AssumeRole
            Effect: Allow
            Principal:
              Service:
                - ecs-tasks.amazonaws.com
      Policies:
        - PolicyName: CloudWatchLogsFullAccess
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - "logs:*"
                Resource: "*"
  EcsDemoLoadbalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    DependsOn: EcsSecurityGroup
    Properties:
      Name: ecs-demo-alb
      Scheme: internet-facing
      SecurityGroups:
        - !GetAtt EcsSecurityGroup.GroupId
      Subnets: !Ref subnetIdList
      Type: application
  EcsDemoListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !GetAtt EcsDemoLoadbalancer.LoadBalancerArn
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref EcsDemoServiceTargetGroup
  EcsDemoServiceTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    DependsOn: EcsDemoLoadbalancer
    Properties:
      HealthCheckEnabled: true
      HealthCheckIntervalSeconds: 300
      HealthCheckPath: /
      HealthCheckProtocol: HTTP
      HealthCheckPort: 8080
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      Name: EcsDemoTargetGroup
      Port: 8080
      Protocol: HTTP
      TargetGroupAttributes:
        - Key: stickiness.enabled
          Value: true
        - Key: stickiness.type
          Value: lb_cookie
        - Key: stickiness.lb_cookie.duration_seconds
          Value: 300
      TargetType: ip
      UnhealthyThresholdCount: 10
      VpcId: !Ref ecsDemoVpcId
  EcsDemoTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    DependsOn: TaskExecutionRoleArn
    Properties:
      ExecutionRoleArn: !GetAtt TaskExecutionRoleArn.Arn
      Cpu: 256
      Memory: 512
      Family: my-ecs-task-caas
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      ContainerDefinitions:
        - Name: ecs-demo-container
          Image: !Ref imageRepository
          Cpu: 256
          Memory: 256
          Essential: true
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: "/ecs/ecs-demo-container-caas-logs"
              awslogs-region: !Ref AWS::Region
              awslogs-create-group: "true"
              awslogs-stream-prefix: ecs
          PortMappings:
            - ContainerPort: 8080
              Protocol: tcp
  #          HealthCheck:
  #            Command:
  #              - "CMD-SHELL"
  #              - "curl -f http://localhost:8080 || exit 1"
  #            Interval: 30
  #            Retries: 3
  #            Timeout: 5
  #            StartPeriod: 10
  EcsCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: ecs-demo-cluster
      ClusterSettings:
        - Name: containerInsights
          Value: enabled
  EcsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: ecs-security-group
      GroupDescription: 'ecs security group'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
  EcsDemoService:
    Type: AWS::ECS::Service
    DependsOn:
      - EcsDemoTaskDefinition
      - EcsCluster
      - EcsSecurityGroup
      - EcsDemoListener
    Properties:
      ServiceName: ecs-demo-service
      DesiredCount: 2
      LaunchType: FARGATE
      TaskDefinition: !Ref EcsDemoTaskDefinition
      Cluster: !Ref EcsCluster
      LoadBalancers:
        - ContainerName: ecs-demo-container
          ContainerPort: 8080
          TargetGroupArn: !Ref EcsDemoServiceTargetGroup
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          SecurityGroups:
            - !GetAtt EcsSecurityGroup.GroupId
          Subnets: !Ref subnetIdList
